without authentication and read from admin